fixed wrong sized title in menu

--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ nav.nav-open {
 }
 .nav-link {
 	display: block;
+	font-size: 16px;
 	height: 36px;
 	width: 350px;
 	padding: 0 16px 0;
